[package]
authors = ["Brian Caswell <bmc@shmoo.com>"]
categories = ["command-line-utilities"]
description = "retry commands with automatic backoff"
edition = "2021"
license = "MIT"
name = "retry-cli"
repository = "https://github.com/demoray/retry-cli"
version = "0.0.3"

[[bin]]
name = "retry"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
duration-string = "0.4"
exponential-backoff = "2.0"
thiserror = "1.0"
