[package]
authors = ["Brian Caswell <bmc@shmoo.com>"]
categories = ["command-line-utilities"]
description = "retry commands with automatic backoff"
edition = "2021"
license = "MIT"
name = "retry-cli"
repository = "https://github.com/demoray/retry-cli"
version = "0.0.6"

[[bin]]
name = "retry"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
duration-string = "0.5"
exponential-backoff = "2.1"
